unpackaged/main/default/objects/Validation_Kill_Switch__c/Validation_Kill_Switch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Per-object validation rule kill switches. Add a Disable_[ObjectName]__c checkbox field for each object that has validation rules you need to bypass. When checked, validation rules that include the $Setup formula check for this setting are bypassed.</description>
    <label>Validation Kill Switch</label>
</CustomObject>