unpackaged/main/default/objects/Validation_Kill_Switch__c/fields/Disable_Account__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables all validation rules on Account that check this setting.</description>
    <inlineHelpText>Check to bypass Account validation rules.</inlineHelpText>
    <label>Disable Account</label>
    <type>Checkbox</type>
</CustomField>