unpackaged/main/default/objects/Validation_Kill_Switch__c/fields/Disable_Case__c.field-meta.xml
<CustomField>
    <fullName>Disable_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables all validation rules on Case that check this setting.</description>
    <inlineHelpText>Check to bypass Case validation rules.</inlineHelpText>
    <label>Disable Case</label>
    <type>Checkbox</type>
</CustomField>