unpackaged/main/default/objects/Validation_Kill_Switch__c/fields/Disable_Contact__c.field-meta.xml
<CustomField>
    <fullName>Disable_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables all validation rules on Contact that check this setting.</description>
    <inlineHelpText>Check to bypass Contact validation rules.</inlineHelpText>
    <label>Disable Contact</label>
    <type>Checkbox</type>
</CustomField>