unpackaged/main/default/objects/Validation_Kill_Switch__c/fields/Disable_Lead__c.field-meta.xml
<CustomField>
    <fullName>Disable_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables all validation rules on Lead that check this setting.</description>
    <inlineHelpText>Check to bypass Lead validation rules.</inlineHelpText>
    <label>Disable Lead</label>
    <type>Checkbox</type>
</CustomField>