unpackaged/main/default/objects/Validation_Kill_Switch__c/fields/Disable_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables all validation rules on Opportunity that check this setting.</description>
    <inlineHelpText>Check to bypass Opportunity validation rules.</inlineHelpText>
    <label>Disable Opportunity</label>
    <type>Checkbox</type>
</CustomField>